--- a/CinemasService/pom.xml
+++ b/CinemasService/pom.xml
@@ -89,6 +89,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.netflix.ribbon/ribbon-eureka -->
         <dependency>
             <groupId>com.netflix.ribbon</groupId>
