--- a/MoviesService/pom.xml
+++ b/MoviesService/pom.xml
@@ -97,6 +97,7 @@
 		<dependency>
 			<groupId>com.netflix.ribbon</groupId>
 			<artifactId>ribbon-eureka</artifactId>
+			<version>0.1.11</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
 
