--- a/FontEnd/User/package.json
+++ b/FontEnd/User/package.json
@@ -25,6 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "register-service-worker": "^1.7.2",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
