--- a/MoviesService/src/main/resources/application.properties
+++ b/MoviesService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8020
 spring.mvc.throw-exception-if-no-handler-found=true
-
+spring.resources.static-locations=classpath:/static/
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_booking_microservices
 spring.datasource.username=root
 spring.datasource.password=Truonggiang_08
